--- a/Color Toggle/index.html
+++ b/Color Toggle/index.html
@@ -6,17 +6,19 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- hamburger icon -->
 </head>
-<body>
+<body class="bg">
 
 <!-- Top Navigation Menu -->
 <div class="topnav">
     <a href="#home" class="active">Miechenne's color picker</a>
     <!-- Navigation links (hidden by default) -->
     <div id="myLinks">
-        <a href="#red" onclick="body.style.backgroundColor = 'red'; this.style.color = '#FFF'; myFunction()">Red</a>
-        <!-- function is being triggered on click -->
-        <a href="#green" onclick="body.style.backgroundColor = 'green'; this.style.color = '#FFF'; myFunction()">Green</a>
-        <a href="#blue" onclick="body.style.backgroundColor = 'blue'; this.style.color = '#FFF'; myFunction()">Blue</a>
+<!--        feedback was given that there needed to be a LI, so the LI nav menu is now a UL with LI inside it.-->
+        <ul id="link">
+            <li id="red">Red</li>
+            <li id="green">Green</li>
+            <li id="blue">Blue</li>
+        </ul>
     </div>
     <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
@@ -25,17 +27,7 @@
     </a>
 </div>
 </body>
-<script>
-    function myFunction() {
-        // function
-        let x = document.getElementById("myLinks");
-        // select element in html
-        if (x.style.display === "block") {
-            // check to see which style is applied
-            x.style.display = "none";
-        } else {
-            x.style.display = "block";
-        }
-    }
+<!--feedback was given that the JS needed to be in a seperate file.-->
+<script src="app.js" lang="js">
 </script>
 </html>
